--- a/resources/assets/sass/welcome.scss
+++ b/resources/assets/sass/welcome.scss
@@ -3,17 +3,105 @@
   padding: 100%;
 
   .container {
-  width: 100%;
+    width: 100%;
     display: flex;
     flex-direction: row;
+    padding: 4%;
   }
   .img_gauche {
     width: 30%;
     position: relative;
+    padding: 10px;
+    margin-top: 30px;
+
   }
 
   .contenu {
     width: 60%;
     position: relative;
-    }
+    display: flex;
+    flex-direction: column;
+  }
+
+  .baniere {
+    width: 100%;
+    color: #636b6f;
+    font-weight: 100;
+    font-size: 400%;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    text-align: center;
+    padding-bottom: 100px;
+    background-image: url("img/arrierePlanBaniere.jpg");
+  }
+
+  .mainContent {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: auto;
+
+  }
+
+  .nav_zone {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 40px;
+  }
+
+  .nav_zone a {
+    color: #440044;
+    text-decoration: none;
+    margin: 5px;
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    font-size: 140%;
+  }
+
+  .nav_zone a:hover {
+    color: #e83e8c;
+    margin: 5px;
+  }
+
+  .homeContent {
+    color: black;
+    width: 55%;
+    font-weight: 400;
+    font-family: 'Raleway', sans-serif;
+
+  }
+
+  .titre {
+    width: 100%;
+    padding: 5px;
+    background-image: url("img/couleurs.jpg");
+    color: white;
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    font-weight: 400;
+    text-align: center;
+  }
+
+  .actu {
+    color: #636b6f;
+    text-align: center;
+    width: 30%;
+    margin: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 10px;
+  }
+
+  .actu h4 {
+    font-family: "Lucida Console", Monaco, monospace;
+    color: #440044;
+    font-size: large;
+  }
+
+  .footer {
+
+  }
+
+
+
+
+
 }
