--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10591,3 +10591,10 @@ h6,
   margin-bottom: 0;
 }
 
+#flash-message {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  z-index: 10;
+}
+
