Essai d'affichage d'une alerte pour confirmer la suppression d'un commentaire.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -189,3 +189,11 @@ h6, .h6 {
   right: 20px;
   z-index: 10;
 }
+
+#flash-alert {
+  position: fixed;
+  z-index: 3;
+  align-items: center;
+  top: 500px;
+  display: none;
+}
