--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10598,3 +10598,13 @@ h6,
   z-index: 10;
 }
 
+#flash-alert {
+  position: fixed;
+  z-index: 3;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  top: 500px;
+  display: none;
+}
+
