--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -194,6 +194,8 @@ h6, .h6 {
   position: fixed;
   z-index: 3;
   align-items: center;
-  top: 500px;
+  top: 250px;
+  left: 500px;
   display: none;
+  background-color: #cccccc!important;
 }
